POSTing and simple validation
moved POST to /messages
check for target/motivation

--- a/web/index.html
+++ b/web/index.html
@@ -6,11 +6,24 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Rerum Inbox</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
+        <link href="https://unpkg.com/vuetify/dist/vuetify.min.css" rel="stylesheet">
     </head>
     <body>
-        <div>TODO write content</div>
+        <div id="app">
+            <v-app>
+                <main>
+                    <v-container>
+                        Rerum Inbox
+                    </v-container>
+                </main>
+            </v-app>
+        </div>
+        <script src="https://unpkg.com/vue/dist/vue.js"></script>
+        <script src="https://unpkg.com/vuetify/dist/vuetify.js"></script>
+        <script src="app.js"></script>
     </body>
 </html>
